--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://VideoViewz.github.io/WebFront",
+  "homepage": ".",
   "name": "videoview-front",
   "version": "0.1.0",
   "private": true,
